--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "style-loader": "^3.3.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
